...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XE8-US-rok">
                                <rect key="frame" x="20" y="188" width="130" height="65"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RhH-Xb-viz">
                                        <rect key="frame" x="0.0" y="0.0" width="74.5" height="28"/>
                                        <fontDescription key="fontDescription" name="Exo-SemiBold" family="Exo" pointSize="24"/>
                                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Im5-Fz-hdb">
...
                                    </stackView>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="USS-Fp-JAx">
                                <rect key="frame" x="20" y="351.5" width="374" height="58.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myY-xv-Og5">
                                        <rect key="frame" x="0.0" y="0.0" width="68.5" height="16.5"/>
                                        <fontDescription key="fontDescription" name="Exo-SemiBold" family="Exo" pointSize="14"/>
                                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jYg-Wd-eUn">
...
                                </constraints>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" id="sNd-oU-E5X">
                                <rect key="frame" x="20" y="430" width="374" height="62.5"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwv-vJ-9zN">
                                        <rect key="frame" x="0.0" y="0.0" width="66" height="20.5"/>
                                        <fontDescription key="fontDescription" name="Exo-SemiBold" family="Exo" pointSize="14"/>
                                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kgS-cV-UTO">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="KXA-ZI-Pp4" id="TNx-Fv-nzA"/>
                            <outlet property="delegate" destination="KXA-ZI-Pp4" id="jyp-78-58z"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Foodie Fun" id="Iie-UN-Vpy">
                        <barButtonItem key="leftBarButtonItem" title="Account Info" id="Jyq-3J-hby">
                            <connections>
                                <segue destination="uDB-rN-6JU" kind="presentation" identifier="ProfileSegue" id="Fil-b6-Oo5"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="H6J-ef-mdq">
...
